# upbuild.rs

./: .gitignore  .ignore  .jenkinsfile  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
debian/: .gitignore  changelog  control  copyright  rules
etc/: bash_completion.sh
src/: args.rs  cfg.rs  error.rs  exec.rs  file.rs  find.rs  lib.rs  main.rs
tests/: args.upbuild  cd.upbuild  cd.win.upbuild  cmake.upbuild  dotenv.upbuild  header.upbuild  manual.upbuild  norecurse.upbuild  recurse.upbuild  simple.bats  uv4.upbuild  wine.bats
tests/sh/: run.sh
tests/win/: run.bat
tests/win/kill/: .upbuild  test.bat
