[package]
name = "upbuild-rs"
version = "0.12.0"
edition = "2021"
authors = ["Greg Whiteley <greg.whiteley@gmail.com>"]
license = "GPL-3.0-or-later"

repository = "https://github.com/whitty/upbuild-rs"
readme = "README.md"

description = "Simple directory tree build helper - ported from ruby"
categories = ["command-line-utilities"]

exclude = [".jenkinsfile"]

# fix the name of the executable
[[bin]]
name = "upbuild"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
